--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>VôleiHub</title>
     
-    <!-- ADICIONE ESTA LINHA DO TAILWIND CDN -->
+    <!-- DEIXE ESTA LINHA -->
     <script src="https://cdn.tailwindcss.com"></script>
     
   </head>
